--- a/pages/false-index.html
+++ b/pages/false-index.html
@@ -15,7 +15,7 @@
   <section class="title-slide image-break" style="background-image:url('{{cms.imagebreaks.image_breaks[5].image|imageSize(1200)}}');">
     <div class="container">
       <header class="twelve columns">
-        <h1 class="main-title">RISD’s <br/>Interim<br/> President</h1>
+        <h1 class="main-title">RISD's <br/>17th<br/> President</h1>
       </header>
     </div>
   </section>
