--- a/pages/fact-sheet.html
+++ b/pages/fact-sheet.html
@@ -6,7 +6,7 @@
 {% extends "templates/partials/base.html" %}
 
 {# This sets our page <title>. It will append "- Homepage" to the site title defined in base. #}
-{% block title %}{% parent %} - Homepage{% endblock %}
+{% block title %}{% parent %} - {{ cms.factsheet.name }}{% endblock %}
 
 {% block content %}
 
