--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
 {% extends "templates/partials/base.html" %}
 
 {# This sets our page <title>. It will append "- Homepage" to the site title defined in base. #}
-{% block title %}{% parent %} - Homepage{% endblock %}
+{% block title %}{{ cms.bio.name }} - {{ site_title|default('Webhook site') }}{% endblock %}
 
 {% block content %}
 
