--- a/pages/imagebreaks.html
+++ b/pages/imagebreaks.html
@@ -1,5 +1,5 @@
 {# ------------------------------------------------------- #}
-{# INDIVIDUAL VIEW FOR EACH imagebreaks #}
+{# ONE OFF VIEW imagebreaks #}
 {# This page can use any data from http:localhost:2000/cms/#/form/imagebreaks/ #}
 {# Webhook uses the SWIG.js (like Djagno/Twig) templating system. Their documentation is here: #}
 {# http://paularmstrong.github.io/swig/docs/tags/ #}
@@ -10,35 +10,49 @@
 {# http://www.webhook.com/docs/template-inheritance-blocks/ #}
 {% extends "templates/partials/base.html" %}
 {# This sets our page <title>. It will append this imagebreaks's name to the site title defined in base.html #}
-{% block title %}{% parent %} - {{ item.name }}{% endblock %}
+{% block title %}{% parent %} - {{ cms.imagebreaks.name }}{% endblock %}
 {% block content %}
-  <p><a href="{{ url('imagebreaks') }}">View a list of all imagebreaks</a></p>
-  <h1>{{ item.name }}</h1>
+  <h1>{{ cms.imagebreaks.name }}</h1>
   <ul>
       <li>
         <strong>Name: </strong>
-        {{ item.name }}
+        {{ cms.imagebreaks.name }}
       </li>
       <li>
         <strong>Create Date: </strong>
         {# Format the date. You can use PHP's date function to format as needed. http://php.net/manual/en/function.date.php #}
-        {{ item.create_date|date('F d Y') }}
+        {{ cms.imagebreaks.create_date|date('F d Y') }}
       </li>
       <li>
         <strong>Last Updated: </strong>
         {# Format the date. You can use PHP's date function to format as needed. http://php.net/manual/en/function.date.php #}
-        {{ item.last_updated|date('F d Y') }}
+        {{ cms.imagebreaks.last_updated|date('F d Y') }}
       </li>
       <li>
-        <strong>Publish Date: </strong>
-        {# Format the date. You can use PHP's date function to format as needed. http://php.net/manual/en/function.date.php #}
-        {{ item.publish_date|date('F d Y') }}
+        <strong>Image Breaks: </strong>
+        {# Loop of your Repeatable Form items. Remember, you can sort the order in your CMS if you need. #}
+        <ul>
+        {% for row in cms.imagebreaks.image_breaks %}
+            <li>
+              <strong>ID: </strong>
+              {{ row.id }}
+            </li>
+            <li>
+              <strong>Image: </strong>
+              {# You can pull out a lot more information from the image property. Info here: #}
+                {# http://www.webhook.com/docs/widget-template-reference/#image #}
+                <img src="{{ row.image|imageSize(200, 200) }}" />
+            </li>
+        {% endfor %}
+        </ul>
       </li>
       <li>
-        <strong>Image: </strong>
-        {# You can pull out a lot more information from the image property. Info here: #}
-        {# http://www.webhook.com/docs/widget-template-reference/#image #}
-        <img src="{{ item.image|imageSize(200) }}" />
+        <strong>Preview URL: </strong>
+        {{ cms.imagebreaks.preview_url }}
+      </li>
+      <li>
+        <strong>Slug: </strong>
+        {{ cms.imagebreaks.slug }}
       </li>
   </ul>
 {% endblock %}
