--- a/pages/index.html
+++ b/pages/index.html
@@ -10,34 +10,28 @@
 {{ site_title|default('Webhook site') }}{% endblock %}
 
 {% block content %}
+
 {% block header %}
 {% set activeNavItem = 'home' %}
 {% include "templates/partials/header.html" %}
 {% endblock %}
-{% include "templates/partials/poster-moment.html" %}
-<section class="title-slide image-break" style="background-image:url('{{cms.imagebreaks.image_breaks[5].image|imageSize(1800)}}');">
-    <div class="container">
-        <header class="twelve columns">
-            <h1 class="main-title">RISD's
-                <br/>17th<br/>
-                President</h1>
-        </header>
-    </div>
-</section>
 
-<section id="announcement">
-    <div class="container">
-        <div class="three columns"></div>
-        <div class="eight columns offset-by-three">
-            <h2>{{cms.announcement.name}}</h2>
-            {{cms.announcement.announcement|safe}}
-        </div>
-        <div class="eight columns offset-by-three">
-            <h3>
-                <a href="../bio">Learn more about President Somerson</a>
-            </h3>
-        </div>
-    </div>
-</section>
+{% include "templates/partials/poster-moment.html" %}
+{% set data = cms.home %}
+
+<main>
+    <section class="campaign">
+        <article class="campaign-intro">
+            {{ data.campaign_intro|safe }}
+        </article>
+        <article class="campaign-links">
+            {% for link in data.links %}
+                <h3 class="campaign-links--item">
+                    <a href="{{ link.link_url }}"><span>{{ link.link_text }}</span></a>
+                </h3>
+            {% endfor %}
+        </article>
+    </section>
+</main>
 
 {% endblock %}
