--- a/pages/index.html
+++ b/pages/index.html
@@ -27,7 +27,7 @@
         <article class="campaign-links">
             {% for link in data.links %}
                 <h3 class="campaign-links--item">
-                    <a href="{{ link.link_url }}"><span>{{ link.link_text }}</span></a>
+                    <a href="{{ link.link_url }}" target="_blank"><span>{{ link.link_text }}</span></a>
                 </h3>
             {% endfor %}
         </article>
