--- a/pages/inauguration.html
+++ b/pages/inauguration.html
@@ -20,9 +20,14 @@
 <main class="inauguration">
     <h1 class="inauguration-title">Inauguration</h1>
     <section class="inauguration-info narrowColumn">
-        <article class="inauguration-date">{{ inauguration.inauguration_date|date('l')}}</br>{{ inauguration.inauguration_date|date('F, j Y')}}</br>{{ inauguration.inauguration_date|date('g:ia')}}</article>
-        <article class="inauguration-address externalLinks"><a href="" target=_blank><span>{{ inauguration.inauguration_address.street1  }}</br>{{ inauguration.inauguration_address.street2 }}</br>{{ inauguration.inauguration_address.city }}, {{ inauguration.inauguration_address.state }}</span></a></article>
-        {{ inauguration.inauguration_info|safe }}
+        <article class="inauguration-date">
+            {{ inauguration.inauguration_date|date('l')}}</br>{{ inauguration.inauguration_date|date('F, j Y')}}</br>{{ inauguration.inauguration_date|date('g:ia')}}
+        </article>
+        <article class="inauguration-address">
+            <a href="" target=_blank>{{ inauguration.inauguration_address.street1  }}</br>{{ inauguration.inauguration_address.street2 }}</br>{{ inauguration.inauguration_address.city }}, {{ inauguration.inauguration_address.state }}</a>
+        </article>
+        <article class="inauguration-info--note">{{ inauguration.inauguration_info|safe }}
+        </article>
     </section>
 </main>
 
