Menu color and layout changes

--- a/pages/fact-sheet.html
+++ b/pages/fact-sheet.html
@@ -12,7 +12,7 @@
 {% block content %}
 
 {% block header %}
-{% set activeNavItem = 'risd facts' %}
+{% set activeNavItem = 'RISD Facts' %}
 {% include "templates/partials/header.html" %}
 {% endblock %}
 
