--- a/pages/inauguration.html
+++ b/pages/inauguration.html
@@ -13,7 +13,7 @@
 {% set inauguration = cms.inauguration %}
 
 {% block header %}
-{% set activeNavItem = 'inauguration' %}
+{% set activeNavItem = 'Inauguration' %}
 {% include "templates/partials/header.html" %}
 {% endblock %}
 
