--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
 {% block content %}
 
 {% block header %}
-{% set activeNavItem = 'home' %}
+{% set activeNavItem = 'Home' %}
 {% include "templates/partials/header.html" %}
 {% endblock %}
 
