--- a/pages/index.html
+++ b/pages/index.html
@@ -23,24 +23,29 @@
     <section class="campaign-description">
         <article class="campaign-intro narrowColumn">
             <h2 class="campaign-intro--title wideColumn">{{ home.campaign_intro_title }}</h2>
+        </article>
+        <article class="campaign-links">
+            {% for link in home.links %}
+                <a href="{{ link.link_url }}" target="_blank" class="campaign-links--item externalLinks">
+                    <h3>
+                        <span>{{ link.link_text }}</span>
+                    </h3>
+                </a>
+            {% endfor %}
+        </article>
+        <article class="campaign-intro narrowColumn">
             {{ home.campaign_intro|safe }}
         </article>
+    </section>
 
+    <section class="campaign-description">
         <article class="narrativeLinks narrowColumn">
             <h3 class="narrativeLinks-item">
                 <a href="../bio">Read more about Rosanne</a>
             </h3>
         </article>
     </section>
-    <section class="campaign-links--container">
-        <article class="campaign-links">
-            {% for link in home.links %}
-                <h3 class="campaign-links--item externalLinks">
-                    <a href="{{ link.link_url }}" target="_blank"><span>{{ link.link_text }}</span></a>
-                </h3>
-            {% endfor %}
-        </article>
-    </section>
+
 </main>
 
 {% endblock %}
