--- a/pages/index.html
+++ b/pages/index.html
@@ -41,7 +41,7 @@
     <section class="campaign-description">
         <article class="narrativeLinks narrowColumn">
             <h3 class="narrativeLinks-item">
-                <a href="../bio">Read more about Rosanne</a>
+                <a href="../bio">Read more about the president</a>
             </h3>
         </article>
     </section>
