more minor fixes

--- a/pages/fact-sheet.html
+++ b/pages/fact-sheet.html
@@ -28,7 +28,7 @@
     </section>
     <section class="infoGraphic">
         <article class="infoGraphic-category">
-            <h2 class="infoGraphic-category--title">Student Body</h2>
+            <h2 class="infoGraphic-category--title">Student body</h2>
             {% for row in cms.factsheet.student_body %}
             <figure class="infoGraphic-item">
                 <h1 class="infoGraphic-item--data">{{row.data}}</h1>
@@ -51,7 +51,7 @@
         </article>
 
         <article class="infoGraphic-category">
-            <h2 class="infoGraphic-category--title">Acceptance Rate</h2>
+            <h2 class="infoGraphic-category--title">Acceptance rate</h2>
             {% for row in cms.factsheet.acceptance_rate %}
             <figure class="infoGraphic-item">
                 <h1 class="infoGraphic-item--data">{{row.data}}</h1>
@@ -61,7 +61,7 @@
         </article>
 
         <article class="infoGraphic-category">
-            <h2 class="infoGraphic-category--title">Retention Rate</h2>
+            <h2 class="infoGraphic-category--title">Retention rate</h2>
             {% for row in cms.factsheet.retention_rate %}
             <figure class="infoGraphic-item">
                 <h1 class="infoGraphic-item--data">{{row.data}}</h1>
@@ -71,7 +71,7 @@
         </article>
 
         <article class="infoGraphic-category">
-            <h2 class="infoGraphic-category--title">Graduation Rate</h2>
+            <h2 class="infoGraphic-category--title">Graduation rate</h2>
             {% for row in cms.factsheet.graduation_rate %}
             <figure class="infoGraphic-item">
                 <h1 class="infoGraphic-item--data">{{row.data}}</h1>
