--- a/pages/inauguration.html
+++ b/pages/inauguration.html
@@ -28,6 +28,19 @@
         </article>
         <article class="inauguration-info--note">{{ inauguration.inauguration_info|safe }}
         </article>
+        <article class="inauguration-accommodation">
+            <h2 class="inauguration-accommodation--title">Accommodation</h2>
+            {{ inauguration.hotel_info_intro|safe }}
+            {% for hotel in inauguration.hotels %}
+                <a href="{{ hotel.website }}">
+                    <strong>{{ hotel.name }}</strong></br>
+                    <em>{{ hotel.cost }}</em></br>
+                    <p>
+                        {{ hotel.phone_number }}
+                    </p>
+                </a>
+            {% endfor %}
+        </article>
     </section>
 </main>
 
