Added "getting to campus" module

--- a/pages/inauguration.html
+++ b/pages/inauguration.html
@@ -40,6 +40,12 @@
                     </p>
             {% endfor %}
         </article>
+
+        <article class="inauguration-accommodation">
+            <h2 class="inauguration-accommodation--title">Getting to Campus</h2>
+            {{inauguration.getting_to_campus|safe}}
+        </article>
+
     </section>
 </main>
 
