fixed desktop flex column problems

--- a/pages/inauguration.html
+++ b/pages/inauguration.html
@@ -31,7 +31,7 @@
         </article>
     </section>
 
-    <section class="inauguration-info wideColumn">
+    <section class="inauguration-text wideColumn">
         {% if inauguration.video_gallery %}
         <article class="inauguration-videoGallery">
             {% for video in inauguration.video_gallery %}
